Added Langauge changer

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -67,5 +67,6 @@
   "newRequest": "طلب جديد",
   "withdrawDateTime": "تاريخ السحب",
   "history": "التاريخ",
-  "requested_quantity": "الكمية المطلوبة"
+  "requested_quantity": "الكمية المطلوبة",
+  "Language": "اللغة"
 }
