--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -66,5 +66,6 @@
   "newRequest": "New Request",
   "withdrawDateTime": "Withdraw Date Time",
   "history": "History",
-  "requested_quantity": "Requested Quantity"
+  "requested_quantity": "Requested Quantity",
+  "Language": "Language"
 }
